save model command

--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -14,6 +14,8 @@
     "from keras.layers import Activation, Dropout, Flatten, Dense\n",
     "\n",
     "from keras.optimizers import SGD, rmsprop\n",
+    "\n",
+    "import datetime;\n",
     "\n",
     "import os;\n",
     "import os.path;\n",
@@ -376,6 +378,17 @@
    ],
    "source": [
     "model.fit_generator(train_generator, samples_per_epoch=num_train_samples, nb_epoch=num_epoch, validation_data=test_generator, nb_val_samples=num_test_samples);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model.save_weights(datetime.datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"));"
    ]
   },
   {
