--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### CSE\n",
+    "### Author: RAVISH CHAWLA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
