trained a svm classifier on imagenet features. low accuracy

--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### CSE\n",
+    "#### CS 8803 BDS Project\n",
     "### Author: RAVISH CHAWLA"
    ]
   },
