:wqresult 1 on first quarter dataset

--- a/keras_classifier.ipynb
+++ b/keras_classifier.ipynb
@@ -10,11 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.models import Sequential\n",
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -67,12 +75,12 @@
     "\n",
     "num_train_samples = 2048;\n",
     "num_test_samples = 2048;\n",
-    "num_epoch = 1;"
+    "num_epoch = 50;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +104,7 @@
     "}\n",
     "\n",
     "input_size = {\n",
-    "    'wc1' : (250, 250, 3),\n",
+    "    'wc1' : (125, 125, 3),\n",
     "    'wc2' : (125, 125, 32),\n",
     "    'wc3' : (63, 63, 32),\n",
     "    'wc4' : (16, 16, 64),\n",
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -212,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "img_width = 250;\n",
-    "img_height = 250;\n",
+    "img_width = 125;\n",
+    "img_height = 125;\n",
     "\n",
-    "data_batch_size = 64;\n",
+    "data_batch_size = 32;\n",
     "\n",
     "data_class_mode = 'binary';\n",
     "\n",
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -301,8 +309,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/1\n",
-      "2048/2048 [==============================] - 211s - loss: 0.6932 - binary_accuracy: 0.5068 - val_loss: 0.6929 - val_binary_accuracy: 0.4956\n"
+      "Epoch 1/50\n",
+      "2048/2048 [==============================] - 58s - loss: 0.6931 - binary_accuracy: 0.5010 - val_loss: 0.6918 - val_binary_accuracy: 0.5010\n",
+      "Epoch 2/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.6922 - binary_accuracy: 0.5244 - val_loss: 0.6926 - val_binary_accuracy: 0.5034\n",
+      "Epoch 3/50\n",
+      "2048/2048 [==============================] - 58s - loss: 0.6895 - binary_accuracy: 0.5552 - val_loss: 0.6820 - val_binary_accuracy: 0.5015\n",
+      "Epoch 4/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6812 - binary_accuracy: 0.5640 - val_loss: 0.6611 - val_binary_accuracy: 0.5986\n",
+      "Epoch 5/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.6656 - binary_accuracy: 0.6074 - val_loss: 0.6491 - val_binary_accuracy: 0.6143\n",
+      "Epoch 6/50\n",
+      "2048/2048 [==============================] - 59s - loss: 0.6575 - binary_accuracy: 0.6094 - val_loss: 0.6411 - val_binary_accuracy: 0.6250\n",
+      "Epoch 7/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6513 - binary_accuracy: 0.6152 - val_loss: 0.6398 - val_binary_accuracy: 0.6333\n",
+      "Epoch 8/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6513 - binary_accuracy: 0.6147 - val_loss: 0.6310 - val_binary_accuracy: 0.6318\n",
+      "Epoch 9/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6464 - binary_accuracy: 0.6152 - val_loss: 0.6293 - val_binary_accuracy: 0.6313\n",
+      "Epoch 10/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6318 - binary_accuracy: 0.6328 - val_loss: 0.6221 - val_binary_accuracy: 0.6483\n",
+      "Epoch 11/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.6260 - binary_accuracy: 0.6353 - val_loss: 0.6155 - val_binary_accuracy: 0.6475\n",
+      "Epoch 12/50\n",
+      "2048/2048 [==============================] - 59s - loss: 0.6165 - binary_accuracy: 0.6436 - val_loss: 0.5932 - val_binary_accuracy: 0.6646\n",
+      "Epoch 13/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.6239 - binary_accuracy: 0.6553 - val_loss: 0.5763 - val_binary_accuracy: 0.7057\n",
+      "Epoch 14/50\n",
+      "2048/2048 [==============================] - 59s - loss: 0.5948 - binary_accuracy: 0.6826 - val_loss: 0.5847 - val_binary_accuracy: 0.6665\n",
+      "Epoch 15/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.5910 - binary_accuracy: 0.6650 - val_loss: 0.5693 - val_binary_accuracy: 0.6921\n",
+      "Epoch 16/50\n",
+      "2048/2048 [==============================] - 63s - loss: 0.5810 - binary_accuracy: 0.6836 - val_loss: 0.5792 - val_binary_accuracy: 0.7036\n",
+      "Epoch 17/50\n",
+      "2048/2048 [==============================] - 63s - loss: 0.5929 - binary_accuracy: 0.6826 - val_loss: 0.5711 - val_binary_accuracy: 0.6946\n",
+      "Epoch 18/50\n",
+      "2048/2048 [==============================] - 63s - loss: 0.5732 - binary_accuracy: 0.6973 - val_loss: 0.5497 - val_binary_accuracy: 0.7075\n",
+      "Epoch 19/50\n",
+      "2048/2048 [==============================] - 62s - loss: 0.5725 - binary_accuracy: 0.6992 - val_loss: 0.5951 - val_binary_accuracy: 0.6963\n",
+      "Epoch 20/50\n",
+      "2048/2048 [==============================] - 63s - loss: 0.5673 - binary_accuracy: 0.6919 - val_loss: 0.5291 - val_binary_accuracy: 0.7364\n",
+      "Epoch 21/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.5680 - binary_accuracy: 0.7109 - val_loss: 0.5488 - val_binary_accuracy: 0.7197\n",
+      "Epoch 22/50\n",
+      "2048/2048 [==============================] - 60s - loss: 0.5756 - binary_accuracy: 0.7007 - val_loss: 0.5487 - val_binary_accuracy: 0.7213\n",
+      "Epoch 23/50\n",
+      "2048/2048 [==============================] - 66s - loss: 0.5544 - binary_accuracy: 0.7227 - val_loss: 0.5277 - val_binary_accuracy: 0.7319\n",
+      "Epoch 24/50\n",
+      "2048/2048 [==============================] - 67s - loss: 0.5523 - binary_accuracy: 0.7119 - val_loss: 0.5364 - val_binary_accuracy: 0.7358\n",
+      "Epoch 25/50\n",
+      "2048/2048 [==============================] - 66s - loss: 0.5478 - binary_accuracy: 0.7266 - val_loss: 0.5065 - val_binary_accuracy: 0.7583\n",
+      "Epoch 26/50\n",
+      "2048/2048 [==============================] - 66s - loss: 0.5309 - binary_accuracy: 0.7280 - val_loss: 0.5229 - val_binary_accuracy: 0.7300\n",
+      "Epoch 27/50\n",
+      "2048/2048 [==============================] - 75s - loss: 0.5448 - binary_accuracy: 0.7183 - val_loss: 0.5297 - val_binary_accuracy: 0.7344\n",
+      "Epoch 28/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.5456 - binary_accuracy: 0.7222 - val_loss: 0.5039 - val_binary_accuracy: 0.7480\n",
+      "Epoch 29/50\n",
+      "2048/2048 [==============================] - 60s - loss: 0.5232 - binary_accuracy: 0.7402 - val_loss: 0.5170 - val_binary_accuracy: 0.7393\n",
+      "Epoch 30/50\n",
+      "2048/2048 [==============================] - 70s - loss: 0.5159 - binary_accuracy: 0.7480 - val_loss: 0.4977 - val_binary_accuracy: 0.7510\n",
+      "Epoch 31/50\n",
+      "2048/2048 [==============================] - 66s - loss: 0.5439 - binary_accuracy: 0.7222 - val_loss: 0.5130 - val_binary_accuracy: 0.7500\n",
+      "Epoch 32/50\n",
+      "2048/2048 [==============================] - 63s - loss: 0.5353 - binary_accuracy: 0.7324 - val_loss: 0.5039 - val_binary_accuracy: 0.7524\n",
+      "Epoch 33/50\n",
+      "2048/2048 [==============================] - 59s - loss: 0.5329 - binary_accuracy: 0.7300 - val_loss: 0.5008 - val_binary_accuracy: 0.7515\n",
+      "Epoch 34/50\n",
+      "2048/2048 [==============================] - 59s - loss: 0.5047 - binary_accuracy: 0.7344 - val_loss: 0.4950 - val_binary_accuracy: 0.7612\n",
+      "Epoch 35/50\n",
+      "2048/2048 [==============================] - 62s - loss: 0.5085 - binary_accuracy: 0.7485 - val_loss: 0.5378 - val_binary_accuracy: 0.7119\n",
+      "Epoch 36/50\n",
+      "2048/2048 [==============================] - 62s - loss: 0.5198 - binary_accuracy: 0.7432 - val_loss: 0.4785 - val_binary_accuracy: 0.7661\n",
+      "Epoch 37/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.5052 - binary_accuracy: 0.7549 - val_loss: 0.4749 - val_binary_accuracy: 0.7733\n",
+      "Epoch 38/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.4946 - binary_accuracy: 0.7568 - val_loss: 0.5194 - val_binary_accuracy: 0.7476\n",
+      "Epoch 39/50\n",
+      "2048/2048 [==============================] - 60s - loss: 0.4947 - binary_accuracy: 0.7607 - val_loss: 0.4778 - val_binary_accuracy: 0.7641\n",
+      "Epoch 40/50\n",
+      "2048/2048 [==============================] - 60s - loss: 0.5001 - binary_accuracy: 0.7544 - val_loss: 0.4954 - val_binary_accuracy: 0.7588\n",
+      "Epoch 41/50\n",
+      "2048/2048 [==============================] - 64s - loss: 0.5111 - binary_accuracy: 0.7441 - val_loss: 0.4836 - val_binary_accuracy: 0.7704\n",
+      "Epoch 42/50\n",
+      "2048/2048 [==============================] - 62s - loss: 0.5181 - binary_accuracy: 0.7295 - val_loss: 0.4758 - val_binary_accuracy: 0.7666\n",
+      "Epoch 43/50\n",
+      "2048/2048 [==============================] - 58s - loss: 0.4817 - binary_accuracy: 0.7661 - val_loss: 0.5021 - val_binary_accuracy: 0.7554\n",
+      "Epoch 44/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.5011 - binary_accuracy: 0.7642 - val_loss: 0.5084 - val_binary_accuracy: 0.7495\n",
+      "Epoch 45/50\n",
+      "2048/2048 [==============================] - 71s - loss: 0.4970 - binary_accuracy: 0.7485 - val_loss: 0.4460 - val_binary_accuracy: 0.7822\n",
+      "Epoch 46/50\n",
+      "2048/2048 [==============================] - 61s - loss: 0.5061 - binary_accuracy: 0.7490 - val_loss: 0.5029 - val_binary_accuracy: 0.7412\n",
+      "Epoch 47/50\n",
+      "2048/2048 [==============================] - 57s - loss: 0.4849 - binary_accuracy: 0.7661 - val_loss: 0.4621 - val_binary_accuracy: 0.7759\n",
+      "Epoch 48/50\n",
+      "2048/2048 [==============================] - 58s - loss: 0.4718 - binary_accuracy: 0.7686 - val_loss: 0.4912 - val_binary_accuracy: 0.7637\n",
+      "Epoch 49/50\n",
+      "2048/2048 [==============================] - 59s - loss: 0.4677 - binary_accuracy: 0.7798 - val_loss: 0.4729 - val_binary_accuracy: 0.7802\n",
+      "Epoch 50/50\n",
+      "2048/2048 [==============================] - 68s - loss: 0.4863 - binary_accuracy: 0.7622 - val_loss: 0.4537 - val_binary_accuracy: 0.7852\n"
      ]
     }
    ],
