--- a/transfer_learning_1.ipynb
+++ b/transfer_learning_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,8 @@
       "build model started\n",
       "(25088, 512)\n",
       "(512, 2)\n",
-      "build model finished: 0s\n"
+      "build model finished: 0s\n",
+      "<class 'tensorflow.python.framework.ops.Tensor'>\n"
      ]
     }
    ],
@@ -229,7 +230,8 @@
     "#correct_prediction = tf.equal(tf.argmax(vgg.prob, 1), tf.argmax(y, 1));\n",
     "#accuracy = tf.reduce_mean(tf.case(correct_prediction, tf.float32));\n",
     "\n",
-    "init = tf.initialize_all_variables();"
+    "init = tf.initialize_all_variables();\n",
+    "print(type(vgg.prob))"
    ]
   },
   {
