Repository cleanup (moved output files to datafiles directory) and code cleanup

--- a/tensorflow_practice.ipynb
+++ b/tensorflow_practice.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### CS 8803 BDS Project\n",
+    "### Author: RAVISH CHAWLA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
